# ChangeLog for app-text/ghostscript-gpl
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/ghostscript-gpl/ChangeLog,v 1.77 2009/05/06 20:52:22 maekke Exp $

  06 May 2009; Markus Meier <maekke@gentoo.org>
  ghostscript-gpl-8.64-r3.ebuild:
  amd64 stable, bug #264594

  05 May 2009; Raúl Porcel <armin76@gentoo.org>
  ghostscript-gpl-8.64-r3.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #264594

  04 May 2009; Christian Faulhammer <fauli@gentoo.org>
  ghostscript-gpl-8.64-r3.ebuild:
  stable x86, security bug 264594

  04 May 2009; Brent Baude <ranger@gentoo.org>
  ghostscript-gpl-8.64-r3.ebuild:
  Marking ghostscript-gpl-8.64-r3 ppc64 and ppc for bug 264594

  04 May 2009; Jeroen Roovers <jer@gentoo.org>
  ghostscript-gpl-8.64-r3.ebuild:
  Stable for HPPA (bug #264594).

*ghostscript-gpl-8.64-r3 (17 Apr 2009)

  17 Apr 2009; Timo Gurr <tgurr@gentoo.org> -ghostscript-gpl-8.62.ebuild,
  -ghostscript-gpl-8.63.ebuild, -ghostscript-gpl-8.63-r1.ebuild,
  -ghostscript-gpl-8.64.ebuild, -ghostscript-gpl-8.64-r1.ebuild,
  +ghostscript-gpl-8.64-r3.ebuild:
  Revbump addressing security issues, bug #264594. Remove old.

  25 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  ghostscript-gpl-8.64-r2.ebuild:
  arm/ia64/s390/sh stable wrt #261087

  22 Mar 2009; Tobias Klausmann <klausman@gentoo.org>
  ghostscript-gpl-8.64-r2.ebuild:
  Stable on alpha, bug #261087

  20 Mar 2009; Markus Meier <maekke@gentoo.org>
  ghostscript-gpl-8.64-r2.ebuild:
  amd64/x86 stable, bug #261087

  20 Mar 2009; Brent Baude <ranger@gentoo.org>
  ghostscript-gpl-8.64-r2.ebuild:
  Marking ghostscript-gpl-8.64-r2 ppc64 and ppc for bug 261087

*ghostscript-gpl-8.64-r2 (19 Mar 2009)

  19 Mar 2009; Peter Volkov <pva@gentoo.org>
  +ghostscript-gpl-8.64-r2.ebuild:
  Fixed security issue: integer overflows in ICC library, bug #261087, thank
  Robert Buchholz for report. Finaly respect LDFLAGS, bug #209803.
