@@ -6,12 +6,9 @@ AUX ghostscript-gpl-8.64-gsdjvu-1.3-partial-revert.patch 427 RMD160 74f280304b70
 AUX ghostscript-gpl-8.64-interix.patch 1457 RMD160 3d98098b5349131e5359bc9c3a902fcdb2924dba SHA1 952bacdd176fdfdf8edf73e8a17f937544e326e3 SHA256 0c89ab215e80173d710949991cb7e3a2c2803b4cb6de1098b1502ee2542e294d
 DIST acro5-cmaps-2001.tar.gz 631653 RMD160 c723afc2207157a434988b46bcf0a458281c29a4 SHA1 fbc8715eae880f59e2251ae8fa99f79fbcfbd3e5 SHA256 80abec481fd4b5e59ac3d3f5790542dbfabe3c9269a6ac17064160d6dab38ee4
 DIST adobe-cmaps-200406.tar.gz 5001983 RMD160 284b943b3476f6f7e2bc49842fd027c6f7f57552 SHA1 b846292af4541d907dd9041e397c2f1d8c72a056 SHA256 0f397255506cda4b20e362ab5e3f6cdacba09e0a0cca7f4d93afd980977c5689
-DIST ghostscript-8.63.tar.bz2 15017410 RMD160 817d5c1539d88be979c42f67a9246f690328da33 SHA1 c97159d3cccb0b1b5fc409715c6321a7256717ec SHA256 0801ec174fa8ee67679c9ae42af547f5cbc2cc98faab6268187f69c22b86b0a1
 DIST ghostscript-8.64.tar.bz2 16921504 RMD160 565134dcfe1e823b435c3761461c5eb394bd633c SHA1 4c2a6e04145428d35da73fbc4db9c66a75e336e0 SHA256 012f7fec58480c728580836fec6f865588d8a33fe8ada7ae73b1f971440d02bb
-DIST ghostscript-gpl-8.63-patchset-3.tar.bz2 4393 RMD160 16e137c66e08693cfd182a42d6e3ad41fec67af9 SHA1 209115d801276be7c247173f92265599b2a1c5b6 SHA256 ba62b733565bc527213f8d19ef40613a84d6b9791d6b4063521dff2039e2e475
 DIST ghostscript-gpl-8.64-patchset-4.tar.bz2 12171 RMD160 5649eb8e2782c8cb147312917d3f8e4f283567d2 SHA1 36b229a1071116b05be3e17c04b521ded922919a SHA256 58f37993e52ec8182586effa1760e49369dfc8977895f2f0ef13d57263ef8954
 DIST gsdjvu-1.3.tar.gz 204330 RMD160 a6d2326ba9098e801000b957ab5508e998e17be8 SHA1 67fcbd72ae229ff68a5d0cc482d4179e3957df61 SHA256 7702fd287cd881a8b1e7911f780c10f98e332b3a6cd93dd35b245d5816b09ca2
-EBUILD ghostscript-gpl-8.63-r1.ebuild 5499 RMD160 4f22e5398855d3b5c72a61a1e34d53ba03a6eb86 SHA1 7ee82221784b27b3bce234eb2aebd4ee9ea48c2a SHA256 25579883014b5305f65296a15c341c3f2dd96ddb96878ed94db7a009014293f6
-EBUILD ghostscript-gpl-8.64-r3.ebuild 6019 RMD160 1b82678daa1f83282df6bc644b952143c1e6d82b SHA1 41363111c2d83e946f103f4cbc92008f7c7ea7a3 SHA256 180ba2cb7124944726682035d997646d8d3ca241650f8b9ede1124a01fcd7858
-MISC ChangeLog 15115 RMD160 5098c0968011eccade6e64f3b921e6c5fbf63d71 SHA1 8e6f5dbce137ebcc5318f36c647efe17531eca61 SHA256 c74e2ae10bb7cdc4888d1a40301bc4cba2514c5b5f5bb00d99d4df06295dabcc
+EBUILD ghostscript-gpl-8.64-r3.ebuild 5989 RMD160 8c7d32789d5cc6e13e76b97d4a53c7b74274a41f SHA1 e272a222308e27c07e33a3e1178fdaefcabc0551 SHA256 ac13ab41939e05c5d851253b5221b8a6a323c2b925bf8d51c7e81b4101e62f86
+MISC ChangeLog 15333 RMD160 c0de30afa3d03ed0b753cd742f8dc5f36369ac0c SHA1 a3cdd3e243119e230235f0f6e04e50bcd9e979a8 SHA256 63a2a3ff7e62029499e50706b2e328ccc465e779c9c3f802a6da1c1879f2e5d8
 MISC metadata.xml 161 RMD160 1e5b1e42553c8869b93c4a5448e9a2a2ed9fe525 SHA1 209c6a46e4cdd891980115e42ba419e3799f8088 SHA256 7c85e6739a71f5bb23e8de36c88677d772946e61f7285892f7554e37bd2bca76
