@@ -1,6 +1,11 @@
 # ChangeLog for app-text/ghostscript-gpl
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/ghostscript-gpl/ChangeLog,v 1.77 2009/05/06 20:52:22 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/ghostscript-gpl/ChangeLog,v 1.78 2009/05/26 06:05:25 pva Exp $
+
+  26 May 2009; Peter Volkov <pva@gentoo.org> ghostscript-gpl-8.64-r2.ebuild,
+  ghostscript-gpl-8.64-r3.ebuild:
+  Removing app-text/ghostscript-esp from blockers, ghostscript-esp was
+  removed from the tree, bug #261434.
 
   06 May 2009; Markus Meier <maekke@gentoo.org>
   ghostscript-gpl-8.64-r3.ebuild:
